# fastapi-skeleton

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml
alembic/: env.py
alembic/versions/: 5bbef6a610a4_auth_and_rbac.py  adf27922d33d_change_timestamps_to_timezone_aware.py
auth/models/: db.py  domain.py  enums.py  mappers.py  schemas.py
auth/repositories/: auth.py  interfaces.py  repository.py
auth/routers/: auth.py
auth/services/: auth.py  token_cleanup.py
core/: database.py  exceptions.py  instrumentation.py  logging.py  metrics.py  middleware.py  readiness.py  security.py  settings.py  tracing.py
core/db/: __init__.py  interfaces.py  mappers.py  repository.py
middleware/: __init__.py  correlation.py  metrics.py
scripts/: README.md  generate_token.py  local_dev_db.sh
tests/integration/: test_correlation_logging.py  test_health_endpoints.py
tests/loadtest/: k6.js
tests/manual/: auth.http  main.http  notebook.ipynb
tests/unit/: conftest.py  factories.py
tests/unit/auth/repository/: test_token.py  test_user.py
tests/unit/auth/routers/: test_auth.py
tests/unit/auth/services/: test_token_service.py
